load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "crkreflect",
    srcs = [
        "get_provider.go",
        "group_version.go",
        "id_prefix.go",
        "id_prefix_from_id.go",
        "kind_by_id_prefix.go",
        "kind_by_kind_name.go",
        "kind_extractor.go",
        "kind_from_string.go",
        "kind_from_yaml.go",
        "kind_map_gen.go",
        "kind_meta.go",
        "kind_name_by_kind.go",
        "kind_to_kind_meta_map.go",
        "kinds_list.go",
        "new_instance.go",
        "provider_meta.go",
        "providers_list.go",
    ],
    importpath = "github.com/project-planton/project-planton/pkg/crkreflect",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/org/project_planton/provider/_test/testcloudresourceone/v1:testcloudresourceone",
        "//apis/org/project_planton/provider/_test/testcloudresourcethree/v1:testcloudresourcethree",
        "//apis/org/project_planton/provider/_test/testcloudresourcetwo/v1:testcloudresourcetwo",
        "//apis/org/project_planton/provider/atlas/mongodbatlas/v1:mongodbatlas",
        "//apis/org/project_planton/provider/aws/awsalb/v1:awsalb",
        "//apis/org/project_planton/provider/aws/awscertmanagercert/v1:awscertmanagercert",
        "//apis/org/project_planton/provider/aws/awsclientvpn/v1:awsclientvpn",
        "//apis/org/project_planton/provider/aws/awscloudfront/v1:awscloudfront",
        "//apis/org/project_planton/provider/aws/awsdynamodb/v1:awsdynamodb",
        "//apis/org/project_planton/provider/aws/awsec2instance/v1:awsec2instance",
        "//apis/org/project_planton/provider/aws/awsecrrepo/v1:awsecrrepo",
        "//apis/org/project_planton/provider/aws/awsecscluster/v1:awsecscluster",
        "//apis/org/project_planton/provider/aws/awsecsservice/v1:awsecsservice",
        "//apis/org/project_planton/provider/aws/awsekscluster/v1:awsekscluster",
        "//apis/org/project_planton/provider/aws/awseksnodegroup/v1:awseksnodegroup",
        "//apis/org/project_planton/provider/aws/awsiamrole/v1:awsiamrole",
        "//apis/org/project_planton/provider/aws/awsiamuser/v1:awsiamuser",
        "//apis/org/project_planton/provider/aws/awskmskey/v1:awskmskey",
        "//apis/org/project_planton/provider/aws/awslambda/v1:awslambda",
        "//apis/org/project_planton/provider/aws/awsrdscluster/v1:awsrdscluster",
        "//apis/org/project_planton/provider/aws/awsrdsinstance/v1:awsrdsinstance",
        "//apis/org/project_planton/provider/aws/awsroute53zone/v1:awsroute53zone",
        "//apis/org/project_planton/provider/aws/awss3bucket/v1:awss3bucket",
        "//apis/org/project_planton/provider/aws/awssecretsmanager/v1:awssecretsmanager",
        "//apis/org/project_planton/provider/aws/awssecuritygroup/v1:awssecuritygroup",
        "//apis/org/project_planton/provider/aws/awsvpc/v1:awsvpc",
        "//apis/org/project_planton/provider/azure/azureakscluster/v1:azureakscluster",
        "//apis/org/project_planton/provider/azure/azureaksnodepool/v1:azureaksnodepool",
        "//apis/org/project_planton/provider/azure/azurecontainerregistry/v1:azurecontainerregistry",
        "//apis/org/project_planton/provider/azure/azurednszone/v1:azurednszone",
        "//apis/org/project_planton/provider/azure/azurekeyvault/v1:azurekeyvault",
        "//apis/org/project_planton/provider/azure/azurenatgateway/v1:azurenatgateway",
        "//apis/org/project_planton/provider/azure/azurevpc/v1:azurevpc",
        "//apis/org/project_planton/provider/civo/civobucket/v1:civobucket",
        "//apis/org/project_planton/provider/civo/civocertificate/v1:civocertificate",
        "//apis/org/project_planton/provider/civo/civocomputeinstance/v1:civocomputeinstance",
        "//apis/org/project_planton/provider/civo/civodatabase/v1:civodatabase",
        "//apis/org/project_planton/provider/civo/civodnszone/v1:civodnszone",
        "//apis/org/project_planton/provider/civo/civofirewall/v1:civofirewall",
        "//apis/org/project_planton/provider/civo/civoipaddress/v1:civoipaddress",
        "//apis/org/project_planton/provider/civo/civokubernetescluster/v1:civokubernetescluster",
        "//apis/org/project_planton/provider/civo/civokubernetesnodepool/v1:civokubernetesnodepool",
        "//apis/org/project_planton/provider/civo/civovolume/v1:civovolume",
        "//apis/org/project_planton/provider/civo/civovpc/v1:civovpc",
        "//apis/org/project_planton/provider/cloudflare/cloudflared1database/v1:cloudflared1database",
        "//apis/org/project_planton/provider/cloudflare/cloudflarednszone/v1:cloudflarednszone",
        "//apis/org/project_planton/provider/cloudflare/cloudflarekvnamespace/v1:cloudflarekvnamespace",
        "//apis/org/project_planton/provider/cloudflare/cloudflareloadbalancer/v1:cloudflareloadbalancer",
        "//apis/org/project_planton/provider/cloudflare/cloudflarer2bucket/v1:cloudflarer2bucket",
        "//apis/org/project_planton/provider/cloudflare/cloudflareworker/v1:cloudflareworker",
        "//apis/org/project_planton/provider/cloudflare/cloudflarezerotrustaccessapplication/v1:cloudflarezerotrustaccessapplication",
        "//apis/org/project_planton/provider/confluent/confluentkafka/v1:confluentkafka",
        "//apis/org/project_planton/provider/digitalocean/digitaloceanappplatformservice/v1:digitaloceanappplatformservice",
        "//apis/org/project_planton/provider/digitalocean/digitaloceanbucket/v1:digitaloceanbucket",
        "//apis/org/project_planton/provider/digitalocean/digitaloceancertificate/v1:digitaloceancertificate",
        "//apis/org/project_planton/provider/digitalocean/digitaloceancontainerregistry/v1:digitaloceancontainerregistry",
        "//apis/org/project_planton/provider/digitalocean/digitaloceandatabasecluster/v1:digitaloceandatabasecluster",
        "//apis/org/project_planton/provider/digitalocean/digitaloceandnszone/v1:digitaloceandnszone",
        "//apis/org/project_planton/provider/digitalocean/digitaloceandroplet/v1:digitaloceandroplet",
        "//apis/org/project_planton/provider/digitalocean/digitaloceanfirewall/v1:digitaloceanfirewall",
        "//apis/org/project_planton/provider/digitalocean/digitaloceanfunction/v1:digitaloceanfunction",
        "//apis/org/project_planton/provider/digitalocean/digitaloceankubernetescluster/v1:digitaloceankubernetescluster",
        "//apis/org/project_planton/provider/digitalocean/digitaloceankubernetesnodepool/v1:digitaloceankubernetesnodepool",
        "//apis/org/project_planton/provider/digitalocean/digitaloceanloadbalancer/v1:digitaloceanloadbalancer",
        "//apis/org/project_planton/provider/digitalocean/digitaloceanvolume/v1:digitaloceanvolume",
        "//apis/org/project_planton/provider/digitalocean/digitaloceanvpc/v1:digitaloceanvpc",
        "//apis/org/project_planton/provider/gcp/gcpartifactregistryrepo/v1:gcpartifactregistryrepo",
        "//apis/org/project_planton/provider/gcp/gcpcertmanagercert/v1:gcpcertmanagercert",
        "//apis/org/project_planton/provider/gcp/gcpcloudcdn/v1:gcpcloudcdn",
        "//apis/org/project_planton/provider/gcp/gcpcloudfunction/v1:gcpcloudfunction",
        "//apis/org/project_planton/provider/gcp/gcpcloudrun/v1:gcpcloudrun",
        "//apis/org/project_planton/provider/gcp/gcpcloudsql/v1:gcpcloudsql",
        "//apis/org/project_planton/provider/gcp/gcpdnszone/v1:gcpdnszone",
        "//apis/org/project_planton/provider/gcp/gcpgcsbucket/v1:gcpgcsbucket",
        "//apis/org/project_planton/provider/gcp/gcpgkecluster/v1:gcpgkecluster",
        "//apis/org/project_planton/provider/gcp/gcpgkenodepool/v1:gcpgkenodepool",
        "//apis/org/project_planton/provider/gcp/gcpgkeworkloadidentitybinding/v1:gcpgkeworkloadidentitybinding",
        "//apis/org/project_planton/provider/gcp/gcpproject/v1:gcpproject",
        "//apis/org/project_planton/provider/gcp/gcprouternat/v1:gcprouternat",
        "//apis/org/project_planton/provider/gcp/gcpsecretsmanager/v1:gcpsecretsmanager",
        "//apis/org/project_planton/provider/gcp/gcpserviceaccount/v1:gcpserviceaccount",
        "//apis/org/project_planton/provider/gcp/gcpsubnetwork/v1:gcpsubnetwork",
        "//apis/org/project_planton/provider/gcp/gcpvpc/v1:gcpvpc",
        "//apis/org/project_planton/provider/kubernetes/kubernetesaltinityoperator/v1:kubernetesaltinityoperator",
        "//apis/org/project_planton/provider/kubernetes/kubernetesargocd/v1:kubernetesargocd",
        "//apis/org/project_planton/provider/kubernetes/kubernetescertmanager/v1:kubernetescertmanager",
        "//apis/org/project_planton/provider/kubernetes/kubernetesclickhouse/v1:kubernetesclickhouse",
        "//apis/org/project_planton/provider/kubernetes/kubernetescronjob/v1:kubernetescronjob",
        "//apis/org/project_planton/provider/kubernetes/kubernetesdaemonset/v1:kubernetesdaemonset",
        "//apis/org/project_planton/provider/kubernetes/kubernetesdeployment/v1:kubernetesdeployment",
        "//apis/org/project_planton/provider/kubernetes/kuberneteselasticoperator/v1:kuberneteselasticoperator",
        "//apis/org/project_planton/provider/kubernetes/kuberneteselasticsearch/v1:kuberneteselasticsearch",
        "//apis/org/project_planton/provider/kubernetes/kubernetesexternaldns/v1:kubernetesexternaldns",
        "//apis/org/project_planton/provider/kubernetes/kubernetesexternalsecrets/v1:kubernetesexternalsecrets",
        "//apis/org/project_planton/provider/kubernetes/kubernetesgatewayapicrds/v1:kubernetesgatewayapicrds",
        "//apis/org/project_planton/provider/kubernetes/kubernetesgitlab/v1:kubernetesgitlab",
        "//apis/org/project_planton/provider/kubernetes/kubernetesgrafana/v1:kubernetesgrafana",
        "//apis/org/project_planton/provider/kubernetes/kubernetesharbor/v1:kubernetesharbor",
        "//apis/org/project_planton/provider/kubernetes/kuberneteshelmrelease/v1:kuberneteshelmrelease",
        "//apis/org/project_planton/provider/kubernetes/kubernetesingressnginx/v1:kubernetesingressnginx",
        "//apis/org/project_planton/provider/kubernetes/kubernetesistio/v1:kubernetesistio",
        "//apis/org/project_planton/provider/kubernetes/kubernetesjenkins/v1:kubernetesjenkins",
        "//apis/org/project_planton/provider/kubernetes/kuberneteskafka/v1:kuberneteskafka",
        "//apis/org/project_planton/provider/kubernetes/kuberneteskeycloak/v1:kuberneteskeycloak",
        "//apis/org/project_planton/provider/kubernetes/kuberneteslocust/v1:kuberneteslocust",
        "//apis/org/project_planton/provider/kubernetes/kubernetesmanifest/v1:kubernetesmanifest",
        "//apis/org/project_planton/provider/kubernetes/kubernetesmongodb/v1:kubernetesmongodb",
        "//apis/org/project_planton/provider/kubernetes/kubernetesnamespace/v1:kubernetesnamespace",
        "//apis/org/project_planton/provider/kubernetes/kubernetesnats/v1:kubernetesnats",
        "//apis/org/project_planton/provider/kubernetes/kubernetesneo4j/v1:kubernetesneo4j",
        "//apis/org/project_planton/provider/kubernetes/kubernetesopenfga/v1:kubernetesopenfga",
        "//apis/org/project_planton/provider/kubernetes/kubernetesperconamongooperator/v1:kubernetesperconamongooperator",
        "//apis/org/project_planton/provider/kubernetes/kubernetesperconamysqloperator/v1:kubernetesperconamysqloperator",
        "//apis/org/project_planton/provider/kubernetes/kubernetesperconapostgresoperator/v1:kubernetesperconapostgresoperator",
        "//apis/org/project_planton/provider/kubernetes/kubernetespostgres/v1:kubernetespostgres",
        "//apis/org/project_planton/provider/kubernetes/kubernetesprometheus/v1:kubernetesprometheus",
        "//apis/org/project_planton/provider/kubernetes/kubernetesredis/v1:kubernetesredis",
        "//apis/org/project_planton/provider/kubernetes/kubernetessignoz/v1:kubernetessignoz",
        "//apis/org/project_planton/provider/kubernetes/kubernetessolr/v1:kubernetessolr",
        "//apis/org/project_planton/provider/kubernetes/kubernetessolroperator/v1:kubernetessolroperator",
        "//apis/org/project_planton/provider/kubernetes/kubernetesstatefulset/v1:kubernetesstatefulset",
        "//apis/org/project_planton/provider/kubernetes/kubernetesstrimzikafkaoperator/v1:kubernetesstrimzikafkaoperator",
        "//apis/org/project_planton/provider/kubernetes/kubernetestekton/v1:kubernetestekton",
        "//apis/org/project_planton/provider/kubernetes/kubernetestektonoperator/v1:kubernetestektonoperator",
        "//apis/org/project_planton/provider/kubernetes/kubernetestemporal/v1:kubernetestemporal",
        "//apis/org/project_planton/provider/kubernetes/kuberneteszalandopostgresoperator/v1:kuberneteszalandopostgresoperator",
        "//apis/org/project_planton/provider/snowflake/snowflakedatabase/v1:snowflakedatabase",
        "//apis/org/project_planton/shared/cloudresourcekind",
        "//pkg/apis/gvk",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
    ],
)

go_test(
    name = "crkreflect_test",
    srcs = [
        "kind_by_id_prefix_test.go",
        "kind_from_string_test.go",
    ],
    embed = [":crkreflect"],
    deps = ["//apis/org/project_planton/shared/cloudresourcekind"],
)
