load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "fileutil",
    srcs = ["file_util.go"],
    importpath = "github.com/plantonhq/project-planton/pkg/fileutil",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_masterminds_sprig//:sprig",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)
