load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "protobufyaml",
    srcs = ["protobuf_yaml.go"],
    importpath = "github.com/plantonhq/project-planton/pkg/protobufyaml",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/fileutil",
        "@com_github_pkg_errors//:errors",
        "@io_k8s_sigs_yaml//:yaml",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
    ],
)
