load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "root",
    srcs = [
        "apply.go",
        "destroy.go",
        "init.go",
        "load_manifest.go",
        "plan.go",
        "pulumi.go",
        "refresh.go",
        "tofu.go",
        "validate_manifest.go",
        "version.go",
    ],
    importpath = "github.com/project-planton/project-planton/cmd/project-planton/root",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/org/project_planton/shared/iac/pulumi",
        "//apis/org/project_planton/shared/iac/terraform",
        "//cmd/project-planton/root/pulumi",
        "//cmd/project-planton/root/tofu",
        "//internal/cli/cliprint",
        "//internal/cli/flag",
        "//internal/cli/manifest",
        "//internal/cli/prompt",
        "//internal/cli/version",
        "//internal/cli/workspace",
        "//internal/manifest",
        "//pkg/crkreflect",
        "//pkg/iac/provisioner",
        "//pkg/iac/pulumi/pulumistack",
        "//pkg/iac/stackinput",
        "//pkg/iac/stackinput/stackinputproviderconfig",
        "//pkg/iac/tofu/tfbackend",
        "//pkg/iac/tofu/tofumodule",
        "//pkg/kustomize/builder",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_cobra//:cobra",
        "@org_golang_google_protobuf//proto",
    ],
)
