load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "iacrunner",
    srcs = [
        "context.go",
        "resolve_context.go",
        "run_pulumi.go",
        "run_tofu.go",
    ],
    importpath = "github.com/plantonhq/project-planton/internal/cli/iacrunner",
    visibility = ["//:__subpackages__"],
    deps = [
        "//apis/org/project_planton/shared",
        "//apis/org/project_planton/shared/iac/pulumi",
        "//apis/org/project_planton/shared/iac/terraform",
        "//internal/cli/cliprint",
        "//internal/cli/flag",
        "//internal/cli/manifest",
        "//internal/cli/prompt",
        "//internal/manifest",
        "//pkg/iac/localmodule",
        "//pkg/iac/provisioner",
        "//pkg/iac/pulumi/pulumistack",
        "//pkg/iac/stackinput/stackinputproviderconfig",
        "//pkg/iac/tofu/tofumodule",
        "//pkg/kubernetes/kubecontext",
        "@com_github_pkg_errors//:errors",
        "@com_github_spf13_cobra//:cobra",
        "@org_golang_google_protobuf//proto",
    ],
)
