load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "staging",
    srcs = ["staging.go"],
    importpath = "github.com/plantonhq/project-planton/internal/cli/staging",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/cli/cliprint",
        "//internal/cli/workspace",
        "//pkg/fileutil",
        "//pkg/iac/gitrepo",
        "@com_github_pkg_errors//:errors",
    ],
)
