load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "workspace",
    srcs = ["workspace.go"],
    importpath = "github.com/project-planton/project-planton/internal/cli/workspace",
    visibility = ["//:__subpackages__"],
    deps = [
        "//pkg/fileutil",
        "@com_github_pkg_errors//:errors",
    ],
)
