load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "manifestprotobuf",
    srcs = ["field_setter.go"],
    importpath = "github.com/project-planton/project-planton/internal/manifest/manifestprotobuf",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_iancoleman_strcase//:strcase",
        "@com_github_pkg_errors//:errors",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
    ],
)

go_test(
    name = "manifestprotobuf_test",
    srcs = ["field_setter_test.go"],
    embed = [":manifestprotobuf"],
    deps = [
        "//apis/org/project_planton/provider/kubernetes/kubernetesredis/v1:kubernetesredis",
        "@com_github_stretchr_testify//assert",
        "@org_golang_google_protobuf//proto",
    ],
)
