load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "protodefaults",
    srcs = [
        "applier.go",
        "type_converter.go",
    ],
    importpath = "github.com/project-planton/project-planton/internal/manifest/protodefaults",
    visibility = ["//:__subpackages__"],
    deps = [
        "//apis/project/planton/shared/options",
        "@com_github_pkg_errors//:errors",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
    ],
)

go_test(
    name = "protodefaults_test",
    srcs = [
        "applier_test.go",
        "type_converter_test.go",
    ],
    embed = [":protodefaults"],
    deps = [
        "//apis/project/planton/provider/kubernetes/addon/externaldnskubernetes/v1:externaldnskubernetes",
        "//apis/project/planton/shared",
        "//apis/project/planton/shared/kubernetes",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
    ],
)
