load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "codegen_lib",
    srcs = ["main.go"],
    importpath = "github.com/project-planton/project-planton/pkg/crkreflect/codegen",
    visibility = ["//visibility:private"],
    deps = [
        "//apis/org/project-planton/shared/cloudresourcekind",
        "//pkg/crkreflect",
        "@com_github_pkg_errors//:errors",
    ],
)

go_binary(
    name = "codegen",
    embed = [":codegen_lib"],
    visibility = ["//visibility:public"],
)
