load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "gitrepo",
    srcs = [
        "extract_repo_name.go",
        "git_repo.go",
    ],
    importpath = "github.com/project-planton/project-planton/pkg/iac/gitrepo",
    visibility = ["//visibility:public"],
    deps = ["@com_github_pkg_errors//:errors"],
)
