load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "gitrepo",
    srcs = [
        "extract_repo_name.go",
        "git_repo.go",
        "local_repo.go",
    ],
    importpath = "github.com/plantonhq/project-planton/pkg/iac/gitrepo",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/cli/flag",
        "@com_github_pkg_errors//:errors",
        "@com_github_spf13_cobra//:cobra",
    ],
)
