load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "localmodule",
    srcs = ["local_module.go"],
    importpath = "github.com/plantonhq/project-planton/pkg/iac/localmodule",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/org/project_planton/shared",
        "//internal/cli/cliprint",
        "//pkg/crkreflect",
        "//pkg/iac/gitrepo",
        "//pkg/iac/pulumi/pulumimodule",
        "//pkg/iac/tofu/tofumodule",
        "@com_github_pkg_errors//:errors",
        "@com_github_spf13_cobra//:cobra",
    ],
)
