load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "provisioner",
    srcs = ["provisioner.go"],
    importpath = "github.com/project-planton/project-planton/pkg/iac/provisioner",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/iac/provisionerlabels",
        "//pkg/reflection/metadatareflect",
        "@org_golang_google_protobuf//proto",
    ],
)
