load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "stackinput",
    srcs = [
        "extract_manifest.go",
        "providers.go",
        "stack_input.go",
    ],
    importpath = "github.com/plantonhq/project-planton/pkg/iac/stackinput",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/cli/workspace",
        "//pkg/iac/stackinput/stackinputproviderconfig",
        "//pkg/protobufyaml",
        "//pkg/ulidgen",
        "@com_github_pkg_errors//:errors",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
    ],
)
