load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "kubecontext",
    srcs = ["context.go"],
    importpath = "github.com/plantonhq/project-planton/pkg/kubernetes/kubecontext",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/kubernetes/kuberneteslabels",
        "//pkg/reflection/metadatareflect",
        "@org_golang_google_protobuf//proto",
    ],
)
