load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "builder",
    srcs = ["builder.go"],
    importpath = "github.com/project-planton/project-planton/pkg/kustomize/builder",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_pkg_errors//:errors",
        "@io_k8s_sigs_kustomize_api//krusty",
        "@io_k8s_sigs_kustomize_kyaml//filesys",
    ],
)
