load("@rules_buf//buf:defs.bzl", "buf_lint_test")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

go_library(
    name = "shared",
    srcs = [
        "iac.pb.go",
        "metadata.pb.go",
        "status.pb.go",
    ],
    importpath = "github.com/project-planton/project-planton/apis/project/planton/shared",
    visibility = ["//visibility:public"],
    deps = [
        "@build_buf_gen_go_bufbuild_protovalidate_protocolbuffers_go//buf/validate",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

proto_library(
    name = "project_planton_shared_proto",
    srcs = [
        "iac.proto",
        "metadata.proto",
        "status.proto",
    ],
    strip_import_prefix = "/apis",
    visibility = ["//visibility:public"],
    deps = [
        "@buf_deps_apis//buf/validate:validate_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

buf_lint_test(
    name = "project_planton_shared_proto_lint",
    config = "//apis:buf.yaml",
    targets = [":project_planton_shared_proto"],
)
