load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "shared",
    srcs = [
        "iac.pb.go",
        "metadata.pb.go",
        "status.pb.go",
    ],
    importpath = "github.com/project-planton/project-planton/apis/project/planton/shared",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/project/planton/shared/relationship/v1:relationship",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
